--- a/IntegerList/1.zad.csproj
+++ b/IntegerList/1.zad.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{9BB8F4F3-3E11-4B27-B32F-CD21373FC6C6}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>zad1</RootNamespace>
-    <AssemblyName>ConsoleApp2</AssemblyName>
+    <AssemblyName>IntegerList</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
